--- a/package.json
+++ b/package.json
@@ -9,9 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/styled": "^11.11.5",
+    "@formspree/react": "^2.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@gsap/react": "^2.1.0",
+    "@react-three/drei": "^9.102.4",
+    "@react-three/fiber": "^8.15.19",
+    "@react-three/flex": "^1.0.1",
+    "@react-three/postprocessing": "^2.16.2",
+    "@types/three": "^0.162.0",
+    "aos": "^2.3.4",
+    "d3": "^7.8.5",
+    "d3-delaunay": "^6.0.4",
+    "dat.gui": "^0.7.9",
+    "gltfjsx": "^6.2.16",
+    "lodash": "^4.17.21",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "next": "14.2.3",
+    "r3f-perf": "^7.2.1",
+    "raw-loader": "^4.0.2",
+    "react-bootstrap": "^2.10.2",
+    "react-google-recaptcha-v3": "^1.10.1",
+    "react-icons": "^5.1.0",
+    "three": "^0.162.0",
+    "three-stdlib": "^2.29.5",
+    "uuid-by-string": "^4.0.0"
   },
   "devDependencies": {
     "postcss": "^8",
