--- a/package.json
+++ b/package.json
@@ -25,22 +25,23 @@
     "dat.gui": "^0.7.9",
     "gltfjsx": "^6.2.16",
     "lodash": "^4.17.21",
-    "react": "^18",
-    "react-dom": "^18",
     "next": "14.2.3",
     "r3f-perf": "^7.2.1",
     "raw-loader": "^4.0.2",
+    "react": "^18",
     "react-bootstrap": "^2.10.2",
+    "react-dom": "^18",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-icons": "^5.1.0",
     "three": "^0.162.0",
     "three-stdlib": "^2.29.5",
-    "uuid-by-string": "^4.0.0"
+    "uuid-by-string": "^4.0.0",
+    "wouter": "^3.1.2"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
